--- a/myproject.css
+++ b/myproject.css
@@ -1,7 +1,7 @@
 css here. 
 
 #body {
-  background-image: linear-gradient(to right, red , yellow);
+  background-image: linear-gradient(to bottom, #0033cc 0%, #99ccff 58%);
 }
 
 #h1 {
