--- a/myproject.css
+++ b/myproject.css
@@ -1,5 +1,6 @@
 #body {
-  background-image: linear-gradient(to right, red , yellow);
+  height: 600px;
+  background-image: linear-gradient(to bottom right, #0033cc , #99ccff 58%);
 }
 
 #h1 {
@@ -23,7 +24,6 @@
 
 #para {
   text-align: center;
-  border: 3px white;
   margin-left: 30px;
   margin-right: 30px;
 }
