--- a/myproject.css
+++ b/myproject.css
@@ -1,29 +1,61 @@
 #body {
-  height: 600px;
-  background-image: linear-gradient(to bottom right, #0033cc , #99ccff 58%);
+    height: 500%;
+    background-image: linear-gradient(to bottom right, #0033cc, #99ccff 58%);
 }
 
 #h1 {
-  color: white;
-  font-family: "arial";
-  font-size: 40px;
-  
+    color: white;
+    font-family: "arial";
+    font-size: 40px;
 }
 
 #h2 {
-  color: white;
-  font-family: "arial";
-  font-size: 25px;
+    color: white;
+    font-family: "arial";
+    font-size: 25px;
 }
 
 #h3 {
-  color: white;
-  font-family: "arial";
-  font-size: 10px;
+    color: white;
+    font-family: "arial";
+    font-size: 10px;
 }
 
 #para {
-  text-align: center;
-  margin-left: 30px;
-  margin-right: 30px;
+    text-align: center;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+
+/* Style the links inside the navigation bar */
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+
+/* Change the color of links on hover */
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+
+/* Add a color to the active/current link */
+
+.topnav a.active {
+    background-color: #04AA6D;
+    color: white;
 }
