--- a/myproject.css
+++ b/myproject.css
@@ -1,23 +1,25 @@
 #body {
-    height: 500%;
+    height: 100%;
     background-image: linear-gradient(to bottom right, #0033cc, #99ccff 58%);
+    background-repeat: no-repeat;
 }
 
 #h1 {
-    color: white;
-    font-family: "arial";
+    color: #00003E;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 40px;
+    text-align: left;
 }
 
 #h2 {
-    color: white;
-    font-family: "arial";
+    color: #00003E;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 25px;
 }
 
 #h3 {
-    color: white;
-    font-family: "arial";
+    color: #00003E;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 10px;
 }
 
@@ -25,6 +27,8 @@
     text-align: center;
     margin-left: 30px;
     margin-right: 30px;
+    font-family: copperplate;
+    font-size: large;
 }
 
 .topnav {
@@ -58,4 +62,8 @@
 .topnav a.active {
     background-color: #04AA6D;
     color: white;
+}
+
+#solid {
+    border-top: 3px solid rgb(255, 255, 255);
 }
