--- a/myproject.css
+++ b/myproject.css
@@ -1,10 +1,9 @@
-/* gradients, colors etc. */
 #body {
     height: 100%;
     background-image: linear-gradient(to bottom right, #0033cc, #99ccff 58%);
     background-repeat: no-repeat;
 }
-/* headers */
+
 #h1 {
     color: #00003E;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -64,7 +63,14 @@
     background-color: #04AA6D;
     color: white;
 }
-/* dividers between headers and paras */
+
 #solid {
     border-top: 3px solid rgb(255, 255, 255);
 }
+
+#img {
+    border: 5px white;
+    border-style: solid;
+}
+
+
