--- a/myproject.css
+++ b/myproject.css
@@ -1,6 +1,6 @@
 #body {
     height: 100%;
-    background-image: linear-gradient(to bottom right, #0033cc, #99ccff 58%);
+   background-image: linear-gradient(to bottom right,  #1f7a7a, #99e6ff 58%);
     background-repeat: no-repeat;
 }
 
