--- a/myproject.css
+++ b/myproject.css
@@ -6,20 +6,20 @@
 
 #h1 {
     color: #00003E;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'serif';
     font-size: 40px;
     text-align: left;
 }
 
 #h2 {
     color: #00003E;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: serif;
     font-size: 25px;
 }
 
 #h3 {
     color: #00003E;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: serif;
     font-size: 10px;
 }
 
@@ -115,3 +115,4 @@
       border: 1px solid #ccc;  
     }
   
+  }
