--- a/myproject.css
+++ b/myproject.css
@@ -27,7 +27,7 @@
     text-align: center;
     margin-left: 30px;
     margin-right: 30px;
-    font-family: copperplate;
+    font-family: serif;
     font-size: large;
 }
 
