--- a/myproject.css
+++ b/myproject.css
@@ -24,7 +24,7 @@
 }
 
 #para {
-    text-align: center;
+    text-align: left;
     margin-left: 30px;
     margin-right: 30px;
     font-family: serif;
