--- a/myproject.css
+++ b/myproject.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://user-images.githubusercontent.com/94490873/145522544-b20ac6d1-1c75-48f1-be13-4d392e5ef16a.png");
+  background-image: style; width:100px;height:100px url("https://user-images.githubusercontent.com/94490873/145522544-b20ac6d1-1c75-48f1-be13-4d392e5ef16a.png");
   background-repeat: repeat-y;
 }
 
