--- a/myproject.css
+++ b/myproject.css
@@ -1,7 +1,13 @@
-body {
-  background-image: style; width:100px;height:100px url("https://user-images.githubusercontent.com/94490873/145522544-b20ac6d1-1c75-48f1-be13-4d392e5ef16a.png");
-  background-repeat: repeat;
+.tiledBackground {
+  background-image: url("https://user-images.githubusercontent.com/94490873/145522544-b20ac6d1-1c75-48f1-be13-4d392e5ef16a.png");
+  background-size: 150px;
+  width: 300px;
+  height: 300px;
+  border: 2px solid;
+  color: pink;
 }
+
+
 
 #h1 {
     color: #00003E;
@@ -51,7 +57,7 @@ body {
 /* Change the color of links on hover */
 
 .topnav a:hover {
-    background-color: #ddd;
+    background-color: rgb(221, 221, 221);
     color: black;
 }
 
