--- a/myproject.css
+++ b/myproject.css
@@ -1,5 +1,6 @@
 .tiledBackground {
-  background-image: url("https://user-images.githubusercontent.com/94490873/145522544-b20ac6d1-1c75-48f1-be13-4d392e5ef16a.png");
+  background-image: 
+  url("https://user-images.githubusercontent.com/94490873/145522544-b20ac6d1-1c75-48f1-be13-4d392e5ef16a.png");
   background-size: 100px;
   width: 50px;
   height: 50px;
@@ -44,7 +45,7 @@
 
 /* Style the links inside the navigation bar */
 
-.topnav a {
+.header a {
     float: left;
     color: #f2f2f2;
     text-align: center;
@@ -56,7 +57,8 @@
 
 /* Change the color of links on hover */
 
-.topnav a:hover {
+.header
+ a:hover {
     background-color: rgb(221, 221, 221);
     color: black;
 }
@@ -64,12 +66,12 @@
 
 /* Add a color to the active/current link */
 
-.topnav a.active {
+.header a.active {
     background-color: #04AA6D;
     color: white;
 }
 
-#solid {
+#header{
     border-top: 3px solid rgb(255, 255, 255);
 }
 
@@ -78,18 +80,18 @@
     border-style: solid;
 }
 
-.topnav .search-container {
+ .search-container {
     float: right;
   }
   
-  .topnav input[type=text] {
+  .header input[type=text] {
     padding: 6px;
     margin-top: 8px;
     font-size: 17px;
     border: none;
   }
   
-  .topnav .search-container button {
+  .header .search-container button {
     float: right;
     padding: 6px 10px;
     margin-top: 8px;
@@ -100,15 +102,15 @@
     cursor: pointer;
   }
   
-  .topnav .search-container button:hover {
+  .header .search-container button:hover {
     background: #ccc;
   }
   
   @media screen and (max-width: 600px) {
-    .topnav .search-container {
+    .header .search-container {
       float: none;
     }
-    .topnav a, .topnav input[type=text], .topnav .search-container button {
+    .header a, .header input[type=text], header .search-container button {
       float: none;
       display: block;
       text-align: left;
@@ -116,7 +118,7 @@
       margin: 0;
       padding: 14px;
     }
-    .topnav input[type=text] {
+    header input[type=text] {
       border: 1px solid #ccc;  
     }
   
