--- a/test.css
+++ b/test.css
@@ -1,9 +1,12 @@
 
-body {
-    background-image: url("https://user-images.githubusercontent.com/94490873/145522544-b20ac6d1-1c75-48f1-be13-4d392e5ef16a.png");
-    background-repeat: repeat-y;
-    
+.bg{
+    background: url("https://user-images.githubusercontent.com/94490873/145522544-b20ac6d1-1c75-48f1-be13-4d392e5ef16a.png") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   }
+  
   .maintingz
   {
       opacity: 0;
