--- a/test.css
+++ b/test.css
@@ -57,11 +57,16 @@
 }
 
 #para {
-    text-align: left;
+    text-align: center;
     margin-left: 30px;
     margin-right: 30px;
     font-family: serif;
     font-size: large;
+    background-color: white;
+    width: 500px;
+    border: 5px solid white;
+    padding: 25px;
+    margin: 20px;
 }
 
 .topnav {
@@ -149,4 +154,18 @@
       border: 1px solid #ccc;  
     }
   
+  }
+
+  #toc{
+    text-align: left;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-family: serif;
+    font-size: large;
+    background-color: white;
+    width: 500px;
+    border: 5px solid white;
+    padding: 25px;
+    margin: 20px;
+
   }
