--- a/test.css
+++ b/test.css
@@ -1,12 +1,11 @@
 
-.bg{
-    background: url("https://user-images.githubusercontent.com/94490873/145522544-b20ac6d1-1c75-48f1-be13-4d392e5ef16a.png") no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+ #repeat { 
+  background-image:url("https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png");
+  background-repeat: repeat; }
+ bg { 
+    background: url(https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png) no-repeat center center fixed; 
+    background-size: cover;
   }
-  
   .maintingz
   {
       opacity: 0;
@@ -113,7 +112,6 @@
   
   .topnav input[type=text] {
     padding: 6px;
-    margin-top: 8px;
     font-size: 17px;
     border: none;
   }
@@ -149,4 +147,24 @@
       border: 1px solid #ccc;  
     }
   
+  }
+  #page-wrap {
+    position: relative;
+    width: 400
+px;margin: 50
+px
+auto;
+    padding: 20
+px
+;
+    background: white;
+    -moz-box-shadow: 0 0 20px black;
+    -webkit-box-shadow: 0 0 20px black;
+    box-shadow: 0 0 20px black;
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
   }
