--- a/myproject.css
+++ b/myproject.css
@@ -1,7 +1,5 @@
 
-#repeat { 
-  background-image:url("https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png");
-  background-repeat: repeat; }
+
 .bg {
   /* The image used */
   background-image: url("https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png");
@@ -35,7 +33,7 @@
 }
 
 #para {
-    text-align: left;
+    text-align: center;
     margin-left: 30px;
     margin-right: 30px;
     font-family: serif;
@@ -128,3 +126,22 @@
     }
   
   }
+  /*Table of contents CSS*/
+  #toc_container {
+    background: #f9f9f9 none repeat scroll 0 0;
+    border: 1px solid #aaa;
+    display: table;
+    font-size: 95%;
+    margin-bottom: 1em;
+    padding: 20px;
+    width: auto;
+}
+
+.toc_title {
+    font-weight: 700;
+    text-align: center;
+}
+
+#toc_container li, #toc_container ul, #toc_container ul li{
+    list-style: outside none none !important;
+}
