--- a/test.css
+++ b/test.css
@@ -54,19 +54,29 @@
     font-family: serif;
     font-size: 10px;
 }
-
+#h4 {
+  color: #00003E;
+  font-family: serif;
+  font-size: 25px;
+}
 #para {
-    text-align: left;
+    text-align: center;
     margin-left: 30px;
     margin-right: 30px;
     font-family: serif;
     font-size: large;
+    background-color: white;
+    width: 500px;
+    border: 5px solid white;
+    padding: 25px;
+    margin: 20px;
 }
 
+
 .topnav {
-    background-color: rgb(245, 239, 239);
+    background-color: rgb(168, 26, 26);
     overflow: hidden;
-    font-family: cursive;
+    font-family:  Helvetica;
 }
 
 
