--- a/quiz.css
+++ b/quiz.css
@@ -30,7 +30,7 @@ body {
 }
  
 .grid #question {
-    font-family: "monospace";
+    font-family: "helvetica";
     font-size: 30px;
     color: #01BBFF;
 }
