--- a/quiz.css
+++ b/quiz.css
@@ -1,11 +1,10 @@
-
 body {
     background-color: #413D3D;
 }
  
 .grid {
-    width: 600px;
-    height: 500px;
+    width: 590px;
+    height: 550px;
     margin: 0 auto;
     background-color: #fff;
     padding: 10px 50px 50px 50px;
@@ -30,7 +29,7 @@ body {
 }
  
 .grid #question {
-    font-family: "helvetica";
+    font-family: "monospace";
     font-size: 30px;
     color: #01BBFF;
 }
@@ -41,7 +40,7 @@ body {
  
 #btn0, #btn1, #btn2, #btn3 {
     background-color: #01BBFF;
-    width: 250px;
+    width: 200px;
     font-size: 20px;
     color: #fff;
     border: 1px solid #1D3C6A;
