--- a/test.css
+++ b/test.css
@@ -71,20 +71,20 @@
 }
 #para {
     text-align: left;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 30px;
+    margin-right: 30px;
     font-family: serif;
     font-size: large;
     background-color: white;
-    width: 950px;
+    width: 500px;
     border: 5px solid white;
-    margin: 10px;
-
+    padding: 25px;
+    margin: 20px;
 }
 
 
 .topnav {
-    background-color: rgb(246, 252, 251);
+    background-color:rgb(63, 45, 45);
     overflow: hidden;
     font-family:  Helvetica;
 }
@@ -113,7 +113,7 @@
 /* Add a color to the active/current link */
 
 .topnav a.active {
-    background-color: #0c88db;
+    background-color: #aa7004;
     color: white;
 }
 
@@ -122,7 +122,7 @@
 }
 
 #img {
-    border: 5px white;
+    border: 5px rgb(2, 2, 2);
     border-style: solid;
 }
 
