--- a/test.css
+++ b/test.css
@@ -48,7 +48,7 @@
 } 
 #h1 {
     color: #00003E;
-    font-family: 'serif';
+    font-family: 'candara';
     font-size: 40px;
     text-align: left;
 }
@@ -74,7 +74,7 @@
     margin-left: 30px;
     margin-right: 30px;
     font-family: serif;
-    font-size: large;
+    font-size: 25px;
     background-color: white;
     width: 500px;
     border: 5px solid white;
@@ -94,7 +94,7 @@
 
 .topnav a {
     float: left;
-    color: #491a1a;
+    color: #bdb6b6;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
