--- a/test.css
+++ b/test.css
@@ -48,32 +48,27 @@
 } 
 #h1 {
     color: #00003E;
-    font-family: 'candara';
     font-size: 40px;
     text-align: left;
 }
 
 #h2 {
     color: #00003E;
-    font-family: serif;
     font-size: 25px;
 }
 
 #h3 {
     color: #00003E;
-    font-family: serif;
     font-size: 10px;
 }
 #h4 {
   color: #00003E;
-  font-family: serif;
   font-size: 25px;
 }
 #para {
     text-align: left;
     margin-left: 30px;
     margin-right: 30px;
-    font-family: serif;
     font-size: 25px;
     background-color: white;
     width: 500px;
@@ -198,6 +193,10 @@
   position: relative;
   margin: auto;
 }
+.slidshow-img
+{
+  max-height: 500px;
+}
 
 /* Hide the images by default */
 .mySlides {
@@ -285,5 +284,5 @@
   to {opacity: 1}
 }
 body{
-  font-family: sans-serif;
+  font-family: helvetica;
 }
