added css classes to each link so the table of console works

--- a/test.css
+++ b/test.css
@@ -341,3 +341,36 @@
 body{
   font-family: helvetica;
 }}
+
+#Platforms{
+  color: #00003E;
+  font-size: 25px;
+}
+#Computer-game{
+  color: #00003E;
+  font-size: 25px;
+}
+#Home-console{
+  color: #00003E;
+  font-size: 25px;
+}
+#Handheld-console{
+  color: #00003E;
+  font-size: 25px;
+}
+#Arcade-Video-Game{
+  color: #00003E;
+  font-size: 25px;
+}
+#Platforms{
+  color: #00003E;
+  font-size: 25px;
+}
+#Platforms{
+  color: #00003E;
+  font-size: 25px;
+}
+#Develpoment{
+  color: #00003E;
+  font-size: 25px;
+}
