more stuff added

--- a/test.css
+++ b/test.css
@@ -362,15 +362,35 @@ body{
   color: #00003E;
   font-size: 25px;
 }
-#Platforms{
-  color: #00003E;
-  font-size: 25px;
-}
-#Platforms{
-  color: #00003E;
-  font-size: 25px;
-}
 #Develpoment{
+  color: #00003E;
+  font-size: 25px;
+}
+#Browser{
+  color: #00003E;
+  font-size: 25px;
+}
+#Mobile{
+  color: #00003E;
+  font-size: 25px;
+}
+#Cloud{
+  color: #00003E;
+  font-size: 25px;
+}
+#Virtual{
+  color: #00003E;
+  font-size: 25px;
+}
+#Emulation{
+  color: #00003E;
+  font-size: 25px;
+}
+#Backward{
+  color: #00003E;
+  font-size: 25px;
+}
+#Types{
   color: #00003E;
   font-size: 25px;
 }
