--- a/test.css
+++ b/test.css
@@ -341,3 +341,59 @@
 .body{
   font-family: "Lato";
 }}
+#Platforms{
+  color: #00003E;
+  font-size: 25px;
+}
+#Computer-game{
+  color: #00003E;
+  font-size: 25px;
+}
+#Home-console{
+  color: #00003E;
+  font-size: 25px;
+}
+#Handheld-console{
+  color: #00003E;
+  font-size: 25px;
+}
+#Arcade-Video-Game{
+  color: #00003E;
+  font-size: 25px;
+}
+
+#Develpoment{
+  color: #00003E;
+  font-size: 25px;
+}
+
+#Browser{
+  color: #00003E;
+  font-size: 25px;
+}
+
+
+  #Mobile{
+  color: #00003E;
+  font-size: 25px;
+}
+#Cloud{
+  color: #00003E;
+  font-size: 25px;
+}
+#Virtual{
+  color: #00003E;
+  font-size: 25px;
+}
+#Emulation{
+  color: #00003E;
+  font-size: 25px;
+}
+#Backward{
+  color: #00003E;
+  font-size: 25px;
+}
+#Types{
+  color: #00003E;
+  font-size: 25px;
+}
